--- a/style.css
+++ b/style.css
@@ -138,14 +138,19 @@ main {
 }
 
 .remove-icon {
-  width: 28px;
-  height: 28px;
+  width: 25px;
+  height: 25px;
+  margin-top: 5px;
   filter: drop-shadow(0 1px 1px rgba(0,0,0,0.2));
   transition: transform 0.3s ease;
 }
 
 .remove-icon:hover {
   transform: scale(1.1);
+}
+
+.shop-container {
+  display:flex;
 }
 
 footer {
@@ -288,49 +293,6 @@ footer {
     font-size: 1rem;
     bottom: 70px;
     right: 15px;
-  }
-}
-
-@media (max-width: 400px) {
-  header {
-    font-size: 1.2rem;
-    padding: 15px 10px;
-  }
-
-  header nav ul {
-    flex-direction: column;
-    gap: 10px;
-  }
-
-  main {
-    margin: 15px auto;
-    padding: 0 8px;
-  }
-
-  .produtos {
-    grid-template-columns: 1fr; /* só uma coluna para mobile bem pequeno */
-    gap: 15px;
-  }
-
-  .produto-img {
-    height: 110px;
-  }
-
-  .nome-produto {
-    font-size: 1rem;
-  }
-
-  .valor-produto {
-    font-size: 0.85rem;
-  }
-
-  .btns {
-    flex-direction: column;
-    gap: 6px;
-  }
-
-  .add {
-    width: 100%;
   }
 }
 
